[gd_scene load_steps=3 format=3 uid="uid://c7k9m4n2xgh5p"]

[ext_resource type="Script" path="res://scripts/game_choose.gd" id="1_game_choose_script"]
[ext_resource type="Texture2D" path="res://assets/opening-bg.jpg" id="2_choose_bg"]

[node name="GameChoose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_choose_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_choose_bg")
expand_mode = 1

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
bbcode_enabled = true
text = "[center][b]Choose Your Path[/b][/center]"
fit_content = true
scroll_active = false

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ActButtonsContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Act1Button" type="Button" parent="MainContainer/ActButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üç≥ Cooking"

[node name="Act2Button" type="Button" parent="MainContainer/ActButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üßΩ Cleaning"

[node name="Act3Button" type="Button" parent="MainContainer/ActButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üå± Farming"

[node name="Spacer2" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚Üê Back to Main Menu"
